SECURITY FIX: Final confirmation of secure repository and completion of Phase 3.

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,7 +1,11 @@
+// jsconfig.json
 {
   "compilerOptions": {
+    "baseUrl": "src",
     "paths": {
-      "@/*": ["./src/*"]
-    }
-  }
+      "@/*": ["*"]
+    },
+    "moduleResolution": "node"
+  },
+  "include": ["src/**/*"]
 }
