--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "framer-motion": "^12.23.24",
+    "mongodb": "^6.20.0",
     "next": "15.5.5",
+    "nodemailer": "^7.0.9",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
